Intro (section) : add contents and style

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.text--green{
+  color: var(--color-green);
+  font-weight: bold;
+}
+
 
 /*! locomotive-scroll v3.5.4 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
 html.has-scroll-smooth {
