--- a/src/components/bigTitle/BigTitle.css
+++ b/src/components/bigTitle/BigTitle.css
@@ -1,6 +1,6 @@
 .bigTitle{
   font-size: 8vw;
-  padding: 3rem;
+  margin-bottom: 2.5rem;
   line-height: 0.9;
   font-family: Alegreya, serif;
   font-weight: 700;
