--- a/src/sections/intro/Intro.css
+++ b/src/sections/intro/Intro.css
@@ -1,7 +1,7 @@
 
 .content {
   padding: 3rem;
-  min-height: 90vh;
+  margin-top: 20vh;
   display: flex;
   position: relative;
   flex-direction: column;
