--- a/src/components/bigTitle/BigTitle.css
+++ b/src/components/bigTitle/BigTitle.css
@@ -1,7 +1,14 @@
-.bigTitle{
-  font-size: 8vw;
-  margin-bottom: 2.5rem;
-  line-height: 0.9;
-  font-family: Alegreya, serif;
-  font-weight: 700;
+.bigTitle {
+	font-size: 128px;
+	margin-bottom: 2.5rem;
+	line-height: 0.9;
+	font-family: Alegreya, serif;
+	font-weight: 700;
+	max-width: 1100px;
+}
+
+@media screen and (max-width: 800px) {
+	.bigTitle {
+		font-size: 80px;
+	}
 }
