--- a/src/index.css
+++ b/src/index.css
@@ -1,93 +1,100 @@
-@import url("https://fonts.googleapis.com/css2?family=Alegreya:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Alegreya:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
+html {
+	scroll-behavior: smooth;
+}
 
 *,
 *::after,
 *::before {
-  box-sizing: border-box;
+	box-sizing: border-box;
+	font-family: 'Inter', sans-serif;
 }
 body {
-  --color-text: #effaf0;
-  --color-bg: #0a0a0a;
-  --color-green: #1db92d;
-  color: var(--color-text);
-  background-color: var(--color-bg);
+	--color-text: #effaf0;
+	--color-bg: #0a0a0a;
+	--color-green: #1db92d;
+	color: var(--color-text);
+	background-color: var(--color-bg);
 }
 
 #root {
-  font-family: neuzeit-grotesk, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	font-family: neuzeit-grotesk, sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 .text--green {
-  color: var(--color-green);
-  font-weight: bold;
+	color: var(--color-green);
+	font-weight: bold;
 }
 
-.container{
-  width: 85vw;
-  margin: 0 auto;
+.container {
+	width: 85vw;
+	max-width: 1440px;
+	margin: 0 auto;
 }
 
 /*! locomotive-scroll v3.5.4 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
 html.has-scroll-smooth {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 html.has-scroll-dragging {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 .has-scroll-smooth body {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 .has-scroll-smooth [data-scroll-container] {
-  min-height: 100vh;
+	min-height: 100vh;
 }
 
 /* Fix bug of scroll for google */
 [data-scroll-container] {
-  perspective: 1px;
+	perspective: 1px;
 }
 
 .c-scrollbar {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 11px;
-  height: 100vh;
-  transform-origin: center right;
-  transition: transform 0.3s, opacity 0.3s;
-  opacity: 0;
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 11px;
+	height: 100vh;
+	transform-origin: center right;
+	transition: transform 0.3s, opacity 0.3s;
+	opacity: 0;
 }
 .c-scrollbar:hover {
-  transform: scaleX(1.45);
+	transform: scaleX(1.45);
 }
 .c-scrollbar:hover,
 .has-scroll-scrolling .c-scrollbar,
 .has-scroll-dragging .c-scrollbar {
-  opacity: 1;
+	opacity: 1;
 }
 
 .c-scrollbar_thumb {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: var(--color-green);
-  opacity: 0.8;
-  width: 7px;
-  border-radius: 10px;
-  margin: 2px;
-  cursor: -webkit-grab;
-  cursor: grab;
+	position: absolute;
+	top: 0;
+	right: 0;
+	background-color: var(--color-green);
+	opacity: 0.8;
+	width: 7px;
+	border-radius: 10px;
+	margin: 2px;
+	cursor: -webkit-grab;
+	cursor: grab;
 }
 .has-scroll-dragging .c-scrollbar_thumb {
-  cursor: -webkit-grabbing;
-  cursor: grabbing;
+	cursor: -webkit-grabbing;
+	cursor: grabbing;
 }
 
 /* CSS Reset */
@@ -173,12 +180,12 @@ time,
 mark,
 audio,
 video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -192,27 +199,27 @@ hgroup,
 menu,
 nav,
 section {
-  display: block;
+	display: block;
 }
 body {
-  line-height: 1;
+	line-height: 1;
 }
 ol,
 ul {
-  list-style: none;
+	list-style: none;
 }
 blockquote,
 q {
-  quotes: none;
+	quotes: none;
 }
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: "";
-  content: none;
+	content: '';
+	content: none;
 }
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+	border-collapse: collapse;
+	border-spacing: 0;
 }
