--- a/src/sections/explication/Explication.css
+++ b/src/sections/explication/Explication.css
@@ -1,105 +1,99 @@
-.explain__container{
-    display: flex;
-    
-}
-.grid__explain{
-    display: grid;
-    grid-template-columns: 1.1fr 0.9fr;
-    padding-left: 4rem;
-    background: linear-gradient(245.28deg, #0F4815 5.34%, #0A0A0A 71.67%);
-    height: 910px;
- 
-    
-}
-.Image{
-
-    object-fit: cover;
-    position: absolute;
-    height: 910px;
-    opacity: 0.6;
-    right: 0;
-}
-.flex__col{
-    display: flex;
-    flex-direction: column;
-    padding-top: 9rem;
-    padding-right: 11rem;
-    
+.explain__container {
+	padding-top: 64px;
+	display: flex;
+	flex-direction: row;
+	row-gap: 48px;
+	flex-wrap: wrap;
 }
 
-h2{
-    font-size: 3.5vw;
-    margin-bottom: 3.5rem;
-    line-height: 1;
-    font-family: Alegreya, serif;
-    font-weight: 700;
-    width: 90%;
-  }
+.explain {
+	display: flex;
+	padding-left: 8vw;
+	background: linear-gradient(245.28deg, #0f4815 5.34%, #0a0a0a 71.67%);
+}
 
-  .flex__col p{
-      font-family: "Inter",sans-serif;
-      font-size: 1.5rem;
-      
-      width: 80%;
-  }
-  .explain__container div p{
-    font-family: "Inter",sans-serif;
-    font-size: 1.1rem;
+.flex__col {
+	display: flex;
+	flex-direction: column;
+	padding-top: 128px;
+}
 
-  }
+.flex__col h2 {
+	font-size: 64px;
+	font-family: Alegreya, serif;
+	font-weight: 700;
+	max-width: 600px;
+	padding-bottom: 40px;
+}
 
-  .icon-eclair{
-    margin-bottom: 1rem;
-  }
-  .icon-bluetooth{
-    margin-bottom: 1.94rem;
-  }
+.explain__desc {
+	display: flex;
+	flex-direction: column;
+	row-gap: 32px;
+	width: 80%;
+}
 
-  .explain h3{
-    font-family: "Inter",sans-serif;
-    font-size: 1.2rem;
-    font-weight: 800;
-    margin-bottom: 1.2rem;
+.explain__desc p {
+	font-family: 'Inter', sans-serif;
+	font-size: 24px;
+	line-height: 1.5;
+}
 
-  }
-  .mb-20{
-    margin-bottom: 4rem;
-  }
- .phone{
-     position: absolute;
-     z-index: 10;
-     bottom:0px;
-     left: -200px;
-     width: 20rem;
-     object-fit: cover;
- }
- .col2{
-    position: relative;
- }
- .green{
-   color: #1DB92D;
- }
- 
+.explain__container div {
+	flex-grow: 1;
+}
 
+.explain__container div p {
+	font-family: 'Inter', sans-serif;
+	font-size: 20px;
+	max-width: 300px;
+	line-height: 1.5;
+}
 
-@media only screen and (max-width: 800px) {
-  .col2{
-    display: none;
-  }
-  .grid__explain{
-    display: flex;
-    overflow: hidden;
-    padding: 3rem;
-    height: auto;
-  }
-  .flex__col{
-    padding: 0rem;
-  }
-  h2{
-    font-size: 1.6rem;
-  }
-  .flex__col p{
-    font-size: 1.1rem;
-    width: 85%;
-  }
+.icon-eclair {
+	margin-bottom: 1rem;
+}
+
+.icon-bluetooth {
+	margin-bottom: 1.94rem;
+}
+
+.explain h3 {
+	font-family: 'Inter', sans-serif;
+	font-size: 20px;
+	font-weight: 800;
+	margin-bottom: 20px;
+}
+
+.phone {
+	position: absolute;
+	z-index: 10;
+	bottom: 0px;
+	left: -40px;
+	width: 20rem;
+	object-fit: cover;
+}
+
+.col2 {
+	position: relative;
+}
+
+.green {
+	color: #1db92d;
+}
+
+@media screen and (max-width: 1420px) {
+	.image {
+		display: none;
+	}
+
+	.explain {
+		flex-direction: column;
+		row-gap: 48px;
+		align-items: center;
+	}
+
+	.phone {
+		position: static;
+	}
 }
