--- a/src/sections/footer/Footer.css
+++ b/src/sections/footer/Footer.css
@@ -1,71 +1,81 @@
 .footer {
-  padding: 40px 0;
+	padding: 40px 0;
 }
 
 .footer,
 .footer a {
-  color: #999999;
-  fill: #999999;
+	color: #999999;
+	fill: #999999;
 }
 
 .footer a {
-  text-decoration: none;
-  transition: all 0.2s;
+	text-decoration: none;
+	transition: all 0.2s;
 }
 
 .footer a:hover {
-  color: #effaf0;
-  fill: #effaf0;
-  transition: all 0.2s;
+	color: #effaf0;
+	fill: #effaf0;
+	transition: all 0.2s;
 }
 
 .footer ul {
-  display: flex;
+	display: flex;
 }
 
-.footer__logo{
-  height: 60px;
-  border-bottom: 1px #effaf0 solid;
+.footer__logo {
+	height: 60px;
+	border-bottom: 1px #effaf0 solid;
 }
 
-.footer__logo svg{
-  fill: #1db92d;
+.footer__logo svg {
+	fill: #1db92d;
 }
 
 .footer__infos {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 30px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-top: 30px;
+	column-gap: 40px;
+	flex-wrap: wrap;
+	row-gap: 20px;
 }
 
 .footer__infos-menu li:not(:last-child) {
-  margin-right: 25px;
-  position: relative;
+	margin-right: 25px;
+	position: relative;
 }
 
 .footer__infos-menu li:not(:last-child)::after {
-  content: "";
-  position: absolute;
-  top: -2px;
-  margin-left: 13px;
-  width: 1px;
-  height: 20px;
-  background-color: #999999;
+	content: '';
+	position: absolute;
+	top: -2px;
+	margin-left: 13px;
+	width: 1px;
+	height: 20px;
+	background-color: #999999;
 }
 
 .footer__infos-right {
-  display: flex;
-}
-
-.footer__infos-menu {
-  margin-left: 5vw;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	column-gap: 40px;
+	row-gap: 20px;
 }
 
 .footer__infos-sn a svg {
-  height: 20px;
+	height: 20px;
 }
 
 .footer__infos-sn li:not(:last-child) {
-  margin-right: 15px;
+	margin-right: 15px;
+}
+
+@media screen and (max-width: 800px) {
+	.footer__infos-menu {
+		flex-wrap: wrap;
+		row-gap: 20px;
+	}
 }
