--- a/src/sections/header/Header.css
+++ b/src/sections/header/Header.css
@@ -1,98 +1,100 @@
 .grid {
-  --grid-height: 70vmax;
-  height: var(--grid-height);
-  position: relative;
-  overflow: hidden;
+	--grid-height: 100vh;
+	height: var(--grid-height);
+	min-height: 967px;
+	position: relative;
+	overflow: hidden;
 }
 
 .grid__wrap {
-  width: 150%;
-  --gridwrap-height: var(--grid-height);
-  height: var(--gridwrap-height);
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate3d(-50%, -50%, 0);
+	width: 150%;
+	--gridwrap-height: var(--grid-height);
+	height: var(--gridwrap-height);
+	min-height: 967px;
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate3d(-50%, -50%, 0);
 }
 
 .grid .grid__wrap {
-  --gridwrap-height: calc(var(--grid-height) * 1.8);
-  transform: translate3d(-50%, -50%, 0) rotate(22.5deg);
+	--gridwrap-height: calc(var(--grid-height) * 1.8);
+	transform: translate3d(-50%, -50%, 0) rotate(22.5deg);
 }
 
 .grid .grid__wrap {
-  width: 150%;
-  display: flex;
-  transform: translate3d(-50%, -50%, 0) rotate(-22.5deg);
-  left: 62%;
-  top: 80%;
-  align-items: center;
-  justify-content: center;
+	width: 150%;
+	display: flex;
+	transform: translate3d(-50%, -50%, 0) rotate(-22.5deg);
+	left: 62%;
+	top: 80%;
+	align-items: center;
+	justify-content: center;
 }
 
 .grid .grid__line {
-  width: 320px;
-  flex: none;
-  padding: 0 1.5vw;
-  display: block;
+	width: 320px;
+	flex: none;
+	padding: 0 1.5vw;
+	display: block;
 }
 
 .grid .grid__line:nth-child(even) {
-  margin-top: -160px;
+	margin-top: -160px;
 }
 
 .grid__line-img {
-  --tile-margin: 2vw;
-  flex: none;
-  width: calc(16.6666% - var(--tile-margin) * 2);
-  height: calc(var(--gridwrap-height) / 3 - (3 * var(--tile-margin) / 2));
-  margin: var(--tile-margin);
-  background-size: cover;
-  background-position: 50% 50%;
+	--tile-margin: 2vw;
+	flex: none;
+	width: calc(16.6666% - var(--tile-margin) * 2);
+	height: calc(var(--gridwrap-height) / 3 - (3 * var(--tile-margin) / 2));
+	margin: var(--tile-margin);
+	background-size: cover;
+	background-position: 50% 50%;
 }
 
 .grid .grid__line-img {
-  --tile-margin: 3vw 0;
-  width: 100%;
-  height: 400px;
+	--tile-margin: 3vw 0;
+	width: 100%;
+	height: 400px;
 	opacity: 0.7;
 }
 
 .grid__content {
-  height: var(--grid-height);
-  width: 100%;
-  background: linear-gradient(
-    119.11deg,
-    rgba(36, 94, 42, 0.7) 0%,
-    rgba(11, 17, 24, 0.7) 100%
-  );
-  position: absolute;
+	min-height: 967px;
+	height: var(--grid-height);
+	width: 100%;
+	background: linear-gradient(
+		119.11deg,
+		rgba(36, 94, 42, 0.7) 0%,
+		rgba(11, 17, 24, 0.7) 100%
+	);
+	position: absolute;
 }
 .grid__content-infos {
-  color: #effaf0;
-  position: absolute;
-  height: 100vh;
-  width: 70%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  margin-left: 4rem;
+	color: #effaf0;
+	position: absolute;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	padding-left: 8vw;
 }
 
-.grid__content-descr{
-  font-size: 1.3rem;
-  line-height: 1.3;
-  width: 70%;
+.grid__content-descr {
+	font-size: 24px;
+	line-height: 1.5;
+	width: 70%;
 }
 
 @media screen and (min-width: 53em) {
-  .grid .grid__line {
-    width: 33vmax;
-  }
-  .grid .grid__line:nth-child(even) {
-    margin-top: -10vmax;
-  }
-  .grid .grid__line-img {
-    height: 40vmax;
-  }
+	.grid .grid__line {
+		width: 33vmax;
+	}
+	.grid .grid__line:nth-child(even) {
+		margin-top: -10vmax;
+	}
+	.grid .grid__line-img {
+		height: 40vmax;
+	}
 }
